--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -426,7 +426,7 @@ be covered in the Verification and Validation document.}
 \subsubsection{Ease of Use Requirements}
 \noindent \begin{itemize}
 	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
-	The product shall use fonts of readable size.
+	The product shall use fonts of readable size to the target user group.
 \end{itemize}
 \subsubsection{Personalization and Internationalization Requirements}
 \noindent \begin{itemize}
