Grammar, sentence structure, spelling fixes

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -824,35 +824,35 @@ be covered in the Verification and Validation document.}
 	\begin{itemize}
 			
 		\item Skill: \textbf{Team management}
-		\\ Rational: In order to organize deadlines, work distribution, project progression and team communication, having good team management principles will guide the team towards a positive and productive environment.
+		\\ Rationale: In order to organize deadlines, work distribution, project progression and team communication, having good team management principles will guide the team towards a positive and productive environment.
 		\\ Team member: William Lee
 		
 		\item Skill: \textbf{Data \& Database management}
-		\\ Rational: Many components of this project will require data tracking and storage in a secure fashion.
+		\\ Rationale: Many components of this project will require data tracking and storage in a secure fashion.
 		\\ Team member: William Lee
 		
 		\item Skill: \textbf{Mobile UI Development}
-		\\ Rational: As a mobile application, this product will need to have a fluid user interface.
+		\\ Rationale: As a mobile application, this product will need to have a fluid user interface.
 		\\ Team member: Dimitri Tsampiras
 		
 		\item Skill: \textbf{Mobile Functionality Development}
-		\\ Rational: As a mobile application, this product will need knowledge in mobile development techniques and functions.
+		\\ Rationale: As a mobile application, this product will require knowledge in mobile development techniques and functions.
 		\\ Team member: Matthew McCracken
 
 		\item Skill: \textbf{Full Stack Development}
-		\\ Rational: As an application utilizing a client side, a server, and an online database, this product will require knowledge of how to integrate different layers of full stack apps.
+		\\ Rationale: As an application utilizing a client side, a server, and an online database, this product will require knowledge of how to integrate different layers of full stack applications.
 		\\ Team member: Matthew McCracken
 		
 		\item Skill: \textbf{Software Communications}
-		\\ Rational: Data distribution and transferring will be required for communication between software layers. Having knowledge towards software communicaton will be required to have efficent communication.
+		\\ Rationale: Data distribution and transferring will be required for communication between software layers. Having knowledge towards software communicaton will be required to have efficent communication.
 		\\ Team member: Jared Bentvelsen
 		
 		\item Skill: \textbf{Document Organization and Writing}
-		\\ Rational: Having descriptive and effective writing will be required to increase usability and decrease the learning curve for users. Document organization will be instrumental to carrying out project principles and guiding the growth and development of the project.
+		\\ Rationale: Having descriptive and effective writing will be required to increase usability and decrease the learning curve for users. Document organization will be instrumental to carrying out project principles and guiding the growth and development of the project.
 		\\ Team member: Yuvraj Randhawa
 		
 		\item Skill: \textbf{Software Architecture and Structure}
-		\\ Rational: Having a sound software structure will increase development efficiency, simplicity and organization. With topic knowledge in this area, software management and testing will be made easy saving time and effort for developers.
+		\\ Rationale: Having a sound software structure will increase development efficiency, simplicity and organization. With topic knowledge in this area, software management and testing will be made easy, saving time and effort for developers.
 		\\ Team member: Bassel Rezkalla
 		
 		
@@ -861,29 +861,29 @@ be covered in the Verification and Validation document.}
 	\begin{itemize}
 		
 		\item Skill: \textbf{Team management}
-		\\ Approach 1: Attend group synergy meetings where we discuss goals for the project, and weekly meetings to discuss issues.
-		\\ Approach 2: Utilize Discord and Gitlab PR to achieve organization and solid communication for all project deliverables.
+		\\ Approach 1: Attend group synergy meetings where we discuss goals for the project and weekly meetings to discuss issues.
+		\\ Approach 2: Utilize Discord and GitLab's PR functionality to achieve organization and solid communication for all project deliverables.
 		\\ Verdict: William will use Approach 1 to improve his Team Management ability. He has chosen this approach because it will bring him face to face with his team and align team goals.
 		
 		\item Skill: \textbf{Data \& Database management}
-		\\ Approach 1: There are many online tutorials and existing solutions for database management to refer and learn from. For Database management, there are many good articles.
+		\\ Approach 1: Make use of the many online tutorials, articles and existing solutions for database management to refer to and learn from.
 		\\ Approach 2: Utilize notes, projects, and past tests from SFWRENG-3DB3, a class that all members of the group took, to achieve good database management practices.
 		\\ Verdict: William will use Approach 2 to improve his database management skills. He has chosen this approach because he has a vast collection of documentation from SFWRENG-3DB3 and did well in the course.
 
 		\item Skill: \textbf{Mobile UI Development}
 		\\ Approach 1: Most mobile UI have well documented libraries to refer and learn from. Having design and prototyping sessions with the team before development will help improve good domain knowledge.
 		\\ Approach 2: Figma is the resource we will use to mock up the frames of our application. It also has extensive documentation and tutorials we will complete.
-		\\ Verdict: Dimitri will use Approach 2 to improve his Mobile UI Development skills. Figma is a valuable resource and familiarizing himself with it will improve his ability to provide quality mobile designs. By performing these tutorials, Dimitri will be exposed to other mobile designs and can see what works and what doesn't. 
+		\\ Verdict: Dimitri will use Approach 2 to improve his Mobile UI Development skills. Figma is a valuable resource and familiarizing himself with it will improve his ability to provide quality mobile designs. By performing these tutorials, Dimitri will be exposed to other mobile designs to learn what works and what doesn't. 
 
 		\item Skill: \textbf{Mobile Functionality Development}
-		\\ Approach 1: We can explore the Touch API and it's documentation to learn about the events emitted by the actions of mobile users.
+		\\ Approach 1: We can explore the Touch API and its documentation to learn about the events emitted by the actions of mobile users.
 		\\ Approach 2: Practice by converting existing applications to make them mobile responsive. Our group has experience making web applications but could practice mobile development by making these apps responsive.
 		\\ Verdict: Matthew will use Approach 1 to improve his Mobile Functionality Development skills. He has chosen this strategy because the Touch API is essential for making mobile applications and he already has experience with responsive web development.
 		
 		\item Skill: \textbf{Full Stack Development}
-		\\ Approach 1: Complete the Google Cloud Certified - Associate Cloud Engineer Certification. This will provide skills on deploying web applications and integrating google cloud services.
-		\\ Approach 2: Set up dummy clients and servers and practice hosting active client apps with simple UI.
-		\\ Verdict: Matthew will use Approach 1 to improve his Full Stack Development skills. He has chosen this strategy because this Certificate offers a more extensive and professional training then Matthew can achieve on his own. Additionally, Googles Certificate will introduce him to many GCP services that the project will need to utilize.
+		\\ Approach 1: Complete the Google Cloud Certified - Associate Cloud Engineer Certification. This will provide skills on deploying web applications and integrating Google Cloud Services.
+		\\ Approach 2: Set up dummy clients and servers and practice hosting active client applications with simple UI.
+		\\ Verdict: Matthew will use Approach 1 to improve his Full Stack Development skills. He has chosen this strategy because this certificate offers a more extensive and professional training than Matthew can achieve on his own. Additionally, Google's certificate will introduce him to many GCP services that the project will need to utilize.
 		
 		\item Skill: \textbf{Software Communications}
 		\\ Approach 1: Perform Github beginner to intermediate tutorials.
@@ -893,11 +893,11 @@ be covered in the Verification and Validation document.}
 		\item Skill: \textbf{Document Organization and Writing}
 		\\ Approach 1: Practice writing in a journal to practice descriptive and clear writing.
 		\\ Approach 2: Review notes from SFWRENG-3I03 to improve communication skills in an engineering context.
-		\\ Verdict: Yuvraj will use Approach 2 to improve his Document Organization and Writing skills. He has chosen this strategy because this course provided lessons on writing in Latex and how to write clear software documents. 
+		\\ Verdict: Yuvraj will use Approach 2 to improve his Document Organization and Writing skills. He has chosen this strategy because this course provided lessons on writing in LaTeX and how to write clear software documents. 
 		
 		\item Skill: \textbf{Software Architecture and Structure}
-		\\ Approach 1: Referring to common software structures and architecture will help create guide lines for making a catered solution to this product. Many University courses such as McMaster SFWRENG-2AA4 and SFWRENG-3A04 discuss topics surrounding software architecture.
-		\\ Approach 2: Hold group meeting to discuss common architecture styles and come to an agreement on how all developers will design this Architecture. Synergy is important with multiple developers designing a core structure.
+		\\ Approach 1: Referring to common software structures and architectures will help create guidelines for making a catered solution for this product. Many university courses such as McMaster's SFWRENG-2AA4 and SFWRENG-3A04 discuss topics surrounding software architecture.
+		\\ Approach 2: Hold group meeting to discuss common architecture styles and come to an agreement on how all developers will design this architecture. Synergy is important with multiple developers designing a core structure.
 		\\ Verdict: Bassel will use Approach 2 to improve his Software Architecture and Structure skills. He has chosen this strategy because it is important for all developers to be on the same page regarding software architecture strategies.
 	\end{itemize}
 	
