Add revision history, upload SRS PDF

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -147,8 +147,8 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+October 1, 2022 & 1.0 & Volere template outline, Functional Requirements\\
+October 5, 2022 & 1.1 & Completed and submitted SRS document\\
 \bottomrule
 \end{tabularx}
 
