--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -147,8 +147,8 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+October 1, 2022 & 1.0 & Volere template outline, Functional Requirements\\
+October 5, 2022 & 1.1 & Completed and submitted SRS document\\
 \bottomrule
 \end{tabularx}
 
@@ -391,27 +391,27 @@ Description: The product shall be able to visually display fitness progress towa
 
 \end{itemize}
 
-\plt{Every IM should map to at least one requirement, but not every requirement
-  has to map to a corresponding IM.}
+%\plt{Every IM should map to at least one requirement, but not every requirement
+%  has to map to a corresponding IM.}
 
 \section{Nonfunctional Requirements}
 
-\plt{List your nonfunctional requirements.  You may consider using a fit
-  criterion to make them verifiable.}
-\plt{The goal is for the nonfunctional requirements to be unambiguous, abstract
-  and verifiable.  This isn't easy to show succinctly, so a good strategy may be
-to give a ``high level'' view of the requirement, but allow for the details to
-be covered in the Verification and Validation document.}
-\plt{An absolute requirement on a quality of the system is rarely needed.  For
-  instance, an accuracy of 0.0101 \% is likely fine, even if the requirement is
-  for 0.01 \% accuracy.  Therefore, the emphasis will often be more on
-  describing now well the quality is achieved, through experimentation, and
-  possibly theory, rather than meeting some bar that was defined a priori.}
-\plt{You do not need an entry for correctness in your NFRs.  The purpose of the
-  SRS is to record the requirements that need to be satisfied for correctness.
-  Any statement of correctness would just be redundant. Rather than discuss
-  correctness, you can characterize how far away from the correct (true)
-  solution you are allowed to be.  This is discussed under accuracy.}
+%\plt{List your nonfunctional requirements.  You may consider using a fit
+%  criterion to make them verifiable.}
+%\plt{The goal is for the nonfunctional requirements to be unambiguous, abstract
+%  and verifiable.  This isn't easy to show succinctly, so a good strategy may be
+%to give a ``high level'' view of the requirement, but allow for the details to
+%be covered in the Verification and Validation document.}
+%\plt{An absolute requirement on a quality of the system is rarely needed.  For
+%  instance, an accuracy of 0.0101 \% is likely fine, even if the requirement is
+%  for 0.01 \% accuracy.  Therefore, the emphasis will often be more on
+%  describing now well the quality is achieved, through experimentation, and
+%  possibly theory, rather than meeting some bar that was defined a priori.}
+%\plt{You do not need an entry for correctness in your NFRs.  The purpose of the
+%  SRS is to record the requirements that need to be satisfied for correctness.
+%  Any statement of correctness would just be redundant. Rather than discuss
+%  correctness, you can characterize how far away from the correct (true)
+%  solution you are allowed to be.  This is discussed under accuracy.}
 \subsection{Look and Feel Requirements}
 \subsubsection{Appearance Requirements}
 \noindent \begin{itemize}
@@ -666,9 +666,9 @@ be covered in the Verification and Validation document.}
 			\item  Design UX wire-frames for the application.
 			\item  Design UI design mockups for the application.
 			\item  Design UI components and testing for the application with front-end technology.
-			\item  Create skeleton of API
+			\item  Create skeleton of API.
 			\item  Revise requirement documents.
-			\item  Implement test report
+			\item  Implement test report.
 			\end{itemize}
 		\subsection{Migration to the New Product}
 			The product will be deployed to the Apple App store first, then it will be added to the Google Play store once it has run without issue on the app store.
@@ -719,105 +719,13 @@ be covered in the Verification and Validation document.}
 		PS & Physical System Description\\
 		R & Requirement\\
 		SRS & Software Requirements Specification\\
-		\progname{} & \plt{put an expanded version of your program name here (as
-			appropriate)}\\
+		%\progname{} & \plt{put an expanded version of your program name here (as
+		%	appropriate)}\\
 		T & Theoretical Model\\
 		\bottomrule
 	\end{tabular}\\
 	
-	\plt{Add any other abbreviations or acronyms that you add}
-	
-	% \begin{figure}[h!]
-		% 	\begin{center}
-			% 		%\rotatebox{-90}
-			% 		{
-				% 			\includegraphics[width=\textwidth]{ATrace.png}
-				% 		}
-			% 		\caption{\label{Fig_ATrace} Traceability Matrix Showing the Connections
-				%Between Items of Different Sections}
-			% 	\end{center}
-		% \end{figure}
-	
-	
-	% \begin{figure}[h!]
-		% 	\begin{center}
-			% 		%\rotatebox{-90}
-			% 		{
-				% 			\includegraphics[width=0.7\textwidth]{RTrace.png}
-				% 		}
-			% 		\caption{\label{Fig_RTrace} Traceability Matrix Showing the Connections
-				%Between Requirements, Instance Models, and Data Constraints}
-			% 	\end{center}
-		% \end{figure}
-	
-	\newpage
-	
-	\bibliographystyle {plainnat}
-	\bibliography {../../refs/References}
-	
-	\newpage
-	
-	\noindent \plt{The following is not part of the template, just some things to
-		consider
-		when filing in the template.}
-	
-	\noindent \plt{Grammar, flow and \LaTeX advice:
-		\begin{itemize}
-			\item For Mac users \texttt{*.DS\_Store} should be in \texttt{.gitignore}
-			\item \LaTeX{} and formatting rules
-			\begin{itemize}
-				\item Variables are italic, everything else not, includes subscripts (link to
-				document)
-				\begin{itemize}
-					\item \href{https://physics.nist.gov/cuu/pdf/typefaces.pdf}{Conventions}
-					\item Watch out for implied multiplication
-				\end{itemize}
-				\item Use BibTeX
-				\item Use cross-referencing
-			\end{itemize}
-			\item Grammar and writing rules
-			\begin{itemize}
-				\item Acronyms expanded on first usage (not just in table of acronyms)
-				\item ``In order to'' should be ``to''
-			\end{itemize}
-	\end{itemize}}
-	
-	\noindent \plt{Advice on using the template:
-		\begin{itemize}
-			\item Difference between physical and software constraints
-			\item Properties of a correct solution means \emph{additional} properties, not
-			a restating of the requirements (may be ``not applicable'' for your problem).
-			If you have a table of output constraints, then these are properties of a
-			correct solution.
-			\item Assumptions have to be invoked somewhere
-			\item ``Referenced by'' implies that there is an explicit reference
-			\item Think of traceability matrix, list of assumption invocations and list of
-			reference by fields as automatically generatable
-			\item If you say the format of the output (plot, table etc), then your
-			requirement could be more abstract
-		\end{itemize}
-	}
-	
 	\newpage{}
-	\section*{Appendix --- Reflection}
-	
-	The information in this section will be used to evaluate the team members on the
-	graduate attribute of Lifelong Learning.  Please answer the following questions:
-	
-	\begin{enumerate}
-		\item What knowledge and skills will the team collectively need to acquire to
-		successfully complete this capstone project?  Examples of possible knowledge
-		to acquire include domain specific knowledge from the domain of your
-		application, or software engineering knowledge, mechatronics knowledge or
-		computer science knowledge.  Skills may be related to technology, or writing,
-		or presentation, or team management, etc.  You should look to identify at
-		least one item for each team member.
-		\item For each of the knowledge areas and skills identified in the previous
-		question, what are at least two approaches to acquiring the knowledge or
-		mastering the skill?  Of the identified approaches, which will each team
-		member pursue, and why did they make this choice?
-	\end{enumerate}
-
 	\section{Reflection Appendix}
 
 	\subsection{Required Skills and Knowledge}
