added components to fmea table

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -123,25 +123,28 @@
 	
 	\section{Failure Mode and Effect Analysis}
 	\subsection{Hazards Out of Scope}
+	Hardware Failure 
 	\subsection{Failure Modes \& Effects Analysis Table}
 	
-	\begin{adjustwidth}{-1cm}{-1cm}
+	\begin{adjustwidth}{-3cm}{-1cm}
 	\centering
-	\noindent\begin{tabular}{ |p{1.7cm}||p{2.5cm}|p{3cm}|p{2cm}|p{3cm}|p{0.7cm}|p{0.7cm}| @{} }
+	\noindent\begin{tabular}{ |p{3.3cm}||p{2.5cm}|p{3.2cm}|p{2cm}|p{3.3cm}|p{0.7cm}|p{0.7cm}| @{} }
 		\hline
-		\multicolumn{7}{|c|}{Failure Modes \& Analysis} \\
+		\multicolumn{7}{|c|}{Failure Modes \& Effect Analysis} \\
 		\hline
 		Component & Failure Modes & Effects Of Failure & Causes Of Failure & Recommended Action & SR & Ref.\\
 		\hline
-		& & & & & &\\
+		User Login \& Authentication& & & & & &\\
 		\hline
-		& & & & & &\\
+		User Private Data Access& & & & & &\\
 		\hline
-		& & & & & &\\
+		User Visual Interface& & & & & &\\
 		\hline
-		& & & & & &\\
+		Workout Suggestion Algorithm& & & & & &\\
 		\hline
-		& & & & & &\\
+		Application Server& & & & & &\\
+		\hline
+		Database& & & & & &\\
 		\hline
 		& & & & & &\\
 		\hline
