--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -86,7 +86,7 @@
 
 	\item The user is assumed to have the Olympian application downloaded.
 
-	\item The user is assumed to have wifi access.
+	\item The user's mobile device is assumed to have internet access.
 
 	\item The user is assumed to have basic mobile device skills such as tapping the screen and swiping.
 		
