--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -81,7 +81,17 @@
 	\section{System Boundaries and Components}
 	
 	\section{Critical Assumptions}
-	
+
+	\begin{itemize}
+
+	\item The user is assumed to have the Olympian application downloaded.
+
+	\item The user's mobile device is assumed to have internet access.
+
+	\item The user is assumed to have basic mobile device skills such as tapping the screen and swiping.
+		
+	\end{itemize}
+
 	\wss{These assumptions that are made about the software or system.  You should
 		minimize the number of assumptions that remove potential hazards.  For instance,
 		you could assume a part will never fail, but it is generally better to include
